# dockertree

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini
design_documents/: 0_initial_design.md  1_python_port.md  environment-package-sharing.plan.md
dockertree/: __main__.py  cli.py  exceptions.py
dockertree/cli/: __init__.py  constants.py  helpers.py
dockertree/cli_commands/: __init__.py  completion.py  compose.py  domains.py  droplets.py  packages.py  passthrough.py  proxy.py  push.py  server_import.py  setup.py  volumes.py  worktrees.py
dockertree/commands/: __init__.py  caddy.py  completion.py  domains.py  droplets.py  packages.py  push.py  setup.py  utility.py  volumes.py  worktree.py
dockertree/completions/: _dockertree  dockertree.bash
dockertree/config/: Caddyfile.dockertree  README.md  __init__.py  docker-compose.global-caddy.yml  settings.py
dockertree/core/: __init__.py  dns_manager.py  docker_manager.py  droplet_manager.py  environment_manager.py  git_manager.py  package_manager.py  server_import_orchestrator.py  worktree_orchestrator.py
dockertree/scripts/: __init__.py  caddy-docker-monitor.py  caddy-dynamic-config.py  server_prep.sh
dockertree/utils/: __init__.py  caddy_config.py  checksum.py  completion_helper.py  confirmation.py  container_selector.py  env_loader.py  file_utils.py  json_output.py  logging.py  path_utils.py  pattern_matcher.py  remote_scripts.py  ssh_manager.py  ssh_utils.py  streaming.py  validation.py
dockertree_mcp/: __init__.py  config.py  server.py
dockertree_mcp/api/: __init__.py  dockertree_api.py
documentation/: ARCHITECTURE.md  PROJECT_SETUP.md  TROUBLESHOOTING.md
examples/: README.md  example.config.yml  example.env.dockertree
mcp/: README.md
tests/: README.md  SETUP_TESTS_DOCUMENTATION.md  SETUP_TESTS_SUMMARY.md  TEST_COVERAGE.md  TEST_PLAN_SETUP_COMMAND.md  __init__.py  comprehensive_test_suite.sh  conftest.py  pytest.ini  run_comprehensive_test.py  run_e2e_test.py  run_setup_tests.py  run_tests.py  test_dockertree.py  test_dockertree.sh  test_entry_point.py  test_playwright_dual_worktree.py
(+50 files in other folders)
