[project]
name = "dockertree"
version = "0.9.0"
description = "Git worktrees with isolated Docker Compose environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "docker>=6.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
dockertree = "dockertree.cli:main"

[project.urls]
Homepage = "https://github.com/catalpainternational/dockertree"
Documentation = "https://github.com/catalpainternational/dockertree/docs"
Repository = "https://github.com/catalpainternational/dockertree"
Issues = "https://github.com/catalpainternational/dockertree/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dockertree"]
include = [
    "dockertree/completions/*",
    "dockertree/config/*",
    "dockertree/scripts/*"
]
