[project]
name = "dockertree"
version = "0.9.2"
description = "Git worktrees with isolated Docker Compose environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "docker>=6.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "pymdown-extensions>=10.0",
]

[project.scripts]
dockertree = "dockertree.cli:main"
dockertree-mcp = "dockertree_mcp.server:cli_main"

[project.urls]
Homepage = "https://github.com/catalpainternational/dockertree"
Documentation = "https://catalpainternational.github.io/dockertree"
Repository = "https://github.com/catalpainternational/dockertree"
Issues = "https://github.com/catalpainternational/dockertree/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dockertree", "dockertree_mcp"]
include = [
    "dockertree/completions/*",
    "dockertree/config/*",
    "dockertree/scripts/*"
]
